--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,11 +3,13 @@
     <page-router-outlet name="homeTab"></page-router-outlet>
   </GridLayout>
 
-  <GridLayout *tabItem="{ title: 'Browse' }">
-    <page-router-outlet name="browseTab"></page-router-outlet>
+  <GridLayout *tabItem="{ title: 'Profile' }">
+    <page-router-outlet name="profileTab"></page-router-outlet>
   </GridLayout>
 
-  <GridLayout *tabItem="{ title: 'Search' }">
-    <page-router-outlet name="searchTab"></page-router-outlet>
+  <GridLayout *tabItem="{ title: 'About' }">
+    <page-router-outlet name="aboutTab"></page-router-outlet>
+
   </GridLayout>
+
 </TabView>
